k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-api-demo-service
  namespace: default
spec:
  selector:
    app: json-api-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30036
  type: NodePort
