k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: json-api-demo-ingress
  namespace: default
spec:
  rules:
    - host: master.yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: json-api-demo-service
                port:
                  number: 80
